tests/baselines/reference/for-of9.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of9.ts(2,11): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/for-ofStatements/for-of9.ts(3,11): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of9.ts (2 errors) ====
    var v: string;
    for (v of ["hello"]) { }
              ~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    for (v of "hello") { }
              ~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.